--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -251,7 +251,8 @@ a {
   width: 30px;
   text-align: center;
   text-decoration: none;
-  border-radius: 50%;
+  margin: 5px 2px;
+  border-radius: 50%; 
 }
 
 /* Add a hover effect if you want */
