--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,14 @@
       {{ content }}
 
       <footer class="site-footer">
+        <a target="_blank" href="https://bit.ly/adivardhan_facebook" class="fa fa-facebook"></a>
+        <a target="_blank" href="https://bit.ly/adivardhan_twitter" class="fa fa-twitter"></a>
+        <a target="_blank" href="https://bit.ly/adivardhan_instagram" class="fa fa-instagram"></a>
+        <a target="_blank" href="https://bit.ly/adivardhan_linkedin" class="fa fa-linkedin"></a>
+        <a target="_blank" href="https://bit.ly/adivardhan_skype" class="fa fa-skype"></a>
+        <a target="_blank" href="https://bit.ly/adivardhan_whatsapp" class="fa fa-whatsapp"></a>
+        <a target="_blank" href="https://bit.ly/adivardhan_telegram" class="fa fa-telegram"></a>
+        <a target="_blank" href="mailto:maheshwariaa_1@rknec.edu" class="fa fa-mail-reply-all"></a>
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
