--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
       
 
       <footer class="site-footer">
-          <span style="font-size:20px"">
+          <span class="main-content" style="font-size:40px">
             <a target="_blank" href="https://bit.ly/adivardhan_facebook" class="fa fa-facebook"></a>
             <a target="_blank" href="https://bit.ly/adivardhan_twitter" class="fa fa-twitter"></a>
             <a target="_blank" href="https://bit.ly/adivardhan_instagram" class="fa fa-instagram"></a>
