--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <a id="skip-to-content" href="#content">Changed</a>
+    <a id="skip-to-content" href="#content">Skip to Main Content</a>
 
     <header class="page-header" role="banner">
         <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
