--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
             <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
         {% endif %}
 
+        <a href="/index.html" class="btn">Home</a>
         <a href="/education/index" class="btn">Education</a>
         <a href="/projects/index" class="btn">Projects</a>
 
