--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
         <a href="/index.html" class="btn">Home</a>
         <a href="/education/index" class="btn">Education</a>
         <a href="/projects/index" class="btn">Projects</a>
-        <a href="/contact/index" class="btn">Contact Me</a>
+        <a href="/contact.html" class="btn">Contact Me</a>
 
     </header>
 
