--- a/stylesheets/contactform.css
+++ b/stylesheets/contactform.css
@@ -124,7 +124,7 @@
   .app-contact {
     margin-top: auto;
     font-size: 8px;
-    color: #888;
+    color: white;
   }
   
   .app-form-group {
@@ -148,13 +148,12 @@
     border-bottom: 1px solid #666;
     color: #ddd;
     font-size: 14px;
-    text-transform: uppercase;
     outline: none;
     transition: border-color .2s;
   }
   
   .app-form-control::placeholder {
-    color: #666;
+    color: white;
   }
   
   .app-form-control:focus {
