--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174182477-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'UA-174182477-1');
     </script>
@@ -16,6 +16,50 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style type="text/css">
+        <!--
+        /* Facebook */
+        .fa-facebook {
+            color: #55ACEE;
+        }
+
+        /* Twitter */
+        .fa-twitter {
+            color: #55ACEE;
+
+        }
+
+        .fa-instagram {
+            color: #fe4164;
+
+        }
+
+        .fa-linkedin {
+            color: #007bb5;
+
+        }
+
+        .fa-skype {
+            color: #00aff0;
+
+        }
+
+        .fa-whatsapp {
+            color: #4ac959;
+
+        }
+
+        .fa-telegram {
+            color: #0088cc;
+
+        }
+
+        .fa-mail-reply-all {
+            color: #00aff0;
+
+        }
+        -->
+    </style>
     {% if site.google_analytics %}
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
     <script>
@@ -42,12 +86,12 @@
         <!--<h2 class="project-tagline">
             {{ page.description | default: site.description | default: site.github.project_tagline }}</h2>-->
         {% if site.github.is_project_page %}
-            <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
         {% endif %}
-        
+
         {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-            <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
         {% endif %}
 
         <a href="/index.html" class="btn">Home</a>
