--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -246,9 +246,9 @@ a {
 
 
 .fa {
-  padding: 20px;
+  /*padding: 20px;
   font-size: 30px;
-  width: 30px;
+  width: 30px;*/
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
