--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,7 +107,7 @@
 
 
         <footer class="site-footer">
-            <div class="main-content" style="font-size:40px">
+            <div class="main-content" style="font-size:25px" align="center">
                 <a target="_blank" href="https://bit.ly/adivardhan_facebook" class="fa fa-facebook"></a>
                 <a target="_blank" href="https://bit.ly/adivardhan_twitter" class="fa fa-twitter"></a>
                 <a target="_blank" href="https://bit.ly/adivardhan_instagram" class="fa fa-instagram"></a>
@@ -116,7 +116,7 @@
                 <a target="_blank" href="https://bit.ly/adivardhan_whatsapp" class="fa fa-whatsapp"></a>
                 <a target="_blank" href="https://bit.ly/adivardhan_telegram" class="fa fa-telegram"></a>
                 <a target="_blank" href="mailto:maheshwariaa_1@rknec.edu" class="fa fa-mail-reply-all"></a><br>
-            </div>
+              </div>
             {% if site.github.is_project_page %}
             <span class="site-footer-owner"><a
                     href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a
