--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -304,17 +304,17 @@ a {
   
 }
 
-.iframe-container {
-  overflow: hidden;
-  padding-top: 56.25%; /* 16:9*/
+.document-container {
   position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
 }
-
-.iframe-container iframe {
-   border: 0;
-   height: 100%;
-   left: 0;
-   position: absolute;
-   top: 0;
-   width: 100%;
+.document-container iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
