--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,7 +117,7 @@
     margin-top: 2rem;
     margin-bottom: 1rem;
     font-weight: normal;
-    color: #ff9f1c; }
+    color: #8d5506; }
   .main-content p {
     margin-bottom: 1em; }
   .main-content code {
