--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,7 @@
     color: #606c71; }
   
   a {
-    color: #240046;
+    color: #240046da;
     text-decoration: none; }
     a:hover {
       text-decoration: underline; }
@@ -113,7 +113,13 @@
     margin-top: 0; }
   .main-content img {
     max-width: 100%; }
-  .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+  .main-content h1{
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    font-weight: normal;
+    color: black; }
+  
+  .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
     margin-top: 2rem;
     margin-bottom: 1rem;
     font-weight: normal;
