--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box; }
 
@@ -10,7 +11,7 @@ body {
   color: #606c71; }
 
 a {
-  color: #240046;
+  color: #240046da;
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
@@ -108,11 +109,17 @@ a {
   margin-top: 0; }
 .main-content img {
   max-width: 100%; }
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+.main-content h1{
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #ff9f1c; }
+  color: black; }
+
+.main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  font-weight: normal;
+  color: #8d5506; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
