--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,7 +97,7 @@
         <a href="/index.html" class="btn">Home</a>
         <a href="/education/index" class="btn">Education</a>
         <a href="/projects/index" class="btn">Projects</a>
-        <a href="/blogs/index" class="btn">Blogs</a>
+        <a href="/blog.html" class="btn">Blogs</a>
         <a href="/contact.html" class="btn">Contact Me</a>
 
     </header>
