add github link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,9 @@
             color: #00aff0;
 
         }
+        .fa-github{
+  color: black;
+}
         -->
     </style>
     {% if site.google_analytics %}
@@ -116,7 +119,8 @@
                 <a target="_blank" href="https://bit.ly/adivardhan_linkedin" class="fa fa-linkedin"></a>
                 <a target="_blank" href="https://bit.ly/adivardhan_skype" class="fa fa-skype"></a>
                 <a target="_blank" href="https://bit.ly/adivardhan_whatsapp" class="fa fa-whatsapp"></a>
-                <a target="_blank" href="mailto:maheshwariaa_1@rknec.edu" class="fa fa-mail-reply-all"></a><br>
+                <a target="_blank" href="mailto:maheshwariaa_1@rknec.edu" class="fa fa-mail-reply-all"></a>
+                <a target="_blank" href="https://github.com/adivardhan1000/" class="fa fa-github"></a><br>
               </div>
             {% if site.github.is_project_page %}
             <span class="site-footer-owner"><a
