--- a/stylesheets/tech2thepoint.css
+++ b/stylesheets/tech2thepoint.css
@@ -113,7 +113,11 @@ section li {
 form {
     background-color: #fff;
     padding: 40px;
-    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 form h2 {
@@ -123,12 +127,26 @@ form h2 {
     margin-bottom: 20px;
 }
 
-form label {
-    display: block;
+label {
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
+    display: block;
 }
+
+input[type="text"],
+textarea {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+textarea {
+    height: 150px;
+}
+
 
 form input[type="text"],
 form input[type="email"],
@@ -168,4 +186,26 @@ form li:before {
     display: inline-block;
     width: 1em;
     margin-left: -1em;
+}
+
+button[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+    background-color: #e6e6e6;
+    color: #333;
+}
+
+@media only screen and (min-width: 768px) {
+    form {
+        max-width: 600px;
+    }
 }
