--- a/_includes/post-content.html
+++ b/_includes/post-content.html
@@ -1,5 +1,4 @@
-<div class="content">
-  <h3 class="title">{{ post.title }}</h3>
+<div class="content p-1">
 
   <p class="excerpt">{{ post.lead_text }}</p>
 
