--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,26 +15,11 @@
         {% endif %}
 
         <div class="break"></div>
-
-        {% for post in paginator.posts %}
-          <div class="wow fadeIn">
-            <div class="post">
-              <h3 class="post-title" data-toggle="collapse" data-target="#post{{ forloop.index }}">{{ post.title }}</h3>
-              <div id="post{{ forloop.index }}" class="collapse">
-                <!-- Content of the post -->
-                {% if post.position == "left" %}
-                  {% include content-left.html %}
-                {% endif %}
-
-                {% if post.position == "right" %}
-                  {% include content-right.html %}
-                {% endif %}
-              </div>
-            </div>
-          </div>
-        {% endfor %}
-
-        {% include pagination.html %}
+        <h3 class="text-center">Most Recent Projects</h3>
+        {% include projects.html %}
+        <div class="text-center mt-4">
+          <a href="/projects/" class="btn btn-primary">View All Projects</a>
+        </div>
 
       </div>
     </div>
