--- a/_layouts/inner.html
+++ b/_layouts/inner.html
@@ -7,6 +7,9 @@
 
           {{ content }}
 
+          {% if page.url contains 'projects' %}
+            {% include projects.html %}
+          {% endif %}
         </div>
       </div>
     </div>
