--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
 
 <main id="portfolio">
   <div class="container">
-    <div class="row">
+      <div class="row">
       <div class="col-md-12">
 
         {% if site.section_title != '' %}
@@ -15,15 +15,18 @@
         {% endif %}
 
         <div class="break"></div>
-        <h3 class="text-center">Most Recent Projects</h3>
-        {% include projects.html %}
-        <div class="text-center mt-4">
-          <a href="/projects/" class="btn btn-primary">View All Projects</a>
-        </div>
 
-      </div>
-    </div>
-  </div>
-</main>
+        {% for post in paginator.posts %}
+        {% if forloop.index <= 2 %} <div class="wow fadeIn">
+          {% if post.position == "left" %}
+          {% include content-left.html %}
+          {% endif %}
 
-{% include footer.html %}
+          {% if post.position == "right" %}
+          {% include content-right.html %}
+          {% endif %}
+          {% else %}
+          {% break %}
+          {% endif %}
+                {% endfor %}
+          {% include footer.html %}
