--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,9 +1,18 @@
 {% assign limit = page.limit_projects | plus: 0 %}
 {% if limit > 0 %}
-  {% assign posts_to_display = site.posts  | slice: 0, limit  %}
+  {% assign posts_to_display = site.posts | slice: 0, limit %}
 {% else %}
   {% assign posts_to_display = site.posts %}
 {% endif %}
+
+<div class="tags">
+  <!-- Display all unique tags as clickable links -->
+  {% assign all_tags = site.posts | map: 'tags' | join: ',' | split: ',' | uniq %}
+  {% for tag in all_tags %}
+    <a href="{{ site.baseurl }}/projects/tags/{{ tag | downcase | slugify }}/" class="tag-link">{{ tag }}</a>
+  {% endfor %}
+</div>
+
 {% for post in posts_to_display %}
 <div class="wow fadeIn">
   <div class="post">
@@ -11,6 +20,12 @@
     <div id="post{{ forloop.index }}" class="collapse">
       <!-- Content of the post -->
       {% include content-right.html %}
+    </div>
+    <div class="post-tags">
+      <!-- Display post tags as clickable links -->
+      {% for tag in post.tags %}
+        <a href="{{ site.baseurl }}/projects/tags/{{ tag | downcase | slugify }}/" class="post-tag">{{ tag }}</a>
+      {% endfor %}
     </div>
   </div>
 </div>
