--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,17 @@
-{% include header.html %}
-
-    <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    {% include post-content.html %}
-                </div>
-            </div>
-        </div>
-    </main>
-
-{% include footer.html %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>{{ page.title }} - {{ site.title }}</title>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.scss">
+</head>
+<body>
+  {% include header.html %}
+  
+  <main>
+    {{ content }}
+  </main>
+  
+  {% include footer.html %}
+</body>
+</html>
