--- a/css/style.scss
+++ b/css/style.scss
@@ -458,3 +458,21 @@ pre {
       background-clip: text;
       -webkit-text-fill-color: transparent; /* Fixes the issue with Safari */
     }
+
+
+    .tag-link, .post-tag {
+      display: inline-block;
+      margin: 5px;
+      padding: 5px 10px;
+      background: #f0f0f0;
+      color: #333;
+      text-decoration: none;
+      border-radius: 4px;
+      transition: background-color 0.3s, color 0.3s;
+    }
+    
+    .tag-link:hover, .post-tag:hover {
+      background: #333;
+      color: #fff;
+    }
+    
